Iniciada listagem de games

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,7 +35,9 @@
             "prefix": "app",
             "style": "camelCase"
           }
-        ]
+        ],
+        "@typescript-eslint/naming-convention": "off",
+        "max-len": "off"
       }
     },
     {
